mycollab-web/src/main/webapp/VAADIN/themes/mycollab/styles.css
/* ... */
.readview-layout-body .v-horizontallayout-gridform-caption .v-horizontallayout-margin, .readview-layout-body .v-horizontallayout-gridform-field .v-horizontallayout-margin {
	padding: 8px 5px 8px 18px;
}
.readview-layout-body .v-gridlayout-margin .gridform-caption {
	background-color: rgb(212, 223, 239);
	border-left: 1px solid #a9a9a9;
	border-right: 1px solid #c8c8c8;
}
.readview-layout-body .v-gridlayout-margin .gridform-caption.first-col {
	border-left: none;
}
.readview-layout-body .v-gridlayout-margin .gridform-field {
/* 	background-color: #e5eff0; */
}
.readview-layout-body .v-gridlayout-margin > div > div > div > div {
	border-top: 1px solid #c8c8c8;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}
.readview-layout-body .v-gridlayout-margin > div > div > div > div.first-row {
	border-top: none;
}
.readview-layout-body .main-info .depotComp {
	margin-top: 0px;
}
.readview-layout-body .main-info .depotComp .v-csslayout-header-wrapper > .v-csslayout-margin {
	padding: 0px 5px 0px 0px;
	border-width: 0px 0px 1px 0px;
	border-style: solid;
	border-color: rgb(169, 169, 169);
}
.readview-layout-body .main-info .depotComp .header-wrapper {
	border: none;
	padding-bottom: 0px;
	background: none;
}
.readview-layout-body .main-info .depotComp .depotHeader .h2 {
	color: rgb(69, 69, 69);
	font-weight: bold;
	padding: 8px 0px 8px 18px;
	font-size: 12px;
	color: rgb(69, 69, 69);
}
.readview-layout-body .main-info .depotComp.collapsed .depotHeader .h2 {
	border-bottom: none;
}
.readview-layout-body .main-info .depotComp .depot-title {
	background-position: left center;
}
.readview-layout-body .main-info .depotComp .depot-title .v-csslayout-margin {
	margin-left: 0px;
}

/* New AddViewLayout */
.v-csslayout-addview-layout {
	margin-top: 20px;
}
.v-csslayout-addview-layout > .v-csslayout-margin {
	border: 1px solid #a9a9a9;
	background-color: #f5f5f5;
	border-radius: 3px 3px 0px 0px;
	padding: 0px;
}
.v-csslayout-addview-layout > .v-csslayout-margin > .v-csslayout-container {
	padding-top:0px;
	margin: 0px;
	position: relative;
	top: 0px;
}
.addview-layout-header {
	background: url('icons/grad-light-top2.png') repeat-x 0 0 #e5e5e5;
	border-radius: 3px 3px 0px 0px;
	border-bottom: 1px solid #a9a9a9;
	position: relative;
	z-index: 0;
	overflow: visible !important;
	top: 0px;
}
.addview-layout-header > div {
	position: absolute !important;
	top: 0px;
}
.addview-layout-header .v-label-h1 {
	padding: 0px 0px 15px 5px;
	font-size: 15px;
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
}
.v-ie .addview-layout-header .v-label-h1 {
	word-wrap: normal;
}
.addview-layout-body > .v-csslayout-margin {
	
}
.addview-layout-body .h2 {
	padding: 8px 0px 8px 18px;
	font-size: 12px;
	border-bottom: 1px solid #a9a9a9;
	color: rgb(69, 69, 69);
}
.addview-layout-body .control-buttons {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	border-bottom: 1px solid #a9a9a9;
}
.addview-layout-body .v-gridlayout-margin {
	border-bottom: 1px solid #a9a9a9;
}
.addview-layout-body .v-horizontallayout-gridform-caption .v-horizontallayout-margin {
	padding: 8px 5px 8px 18px;
}
.addview-layout-body .v-gridlayout-margin .gridform-caption {
	background-color: rgb(212, 223, 239);
	border-left: 1px solid #a9a9a9;
	border-right: 1px solid #c8c8c8;
}
.addview-layout-body .v-gridlayout-margin .gridform-caption.first-col {
	border-left: none;
}
.addview-layout-body .v-gridlayout-margin .gridform-field {
/* 	background-color: #e5eff0; */
}
.addview-layout-body .v-gridlayout-margin .v-csslayout.gridform-field {
	padding: 0px;
}
.addview-layout-body .v-gridlayout-margin > div > div > div > div {
	border-top: 1px solid #c8c8c8;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}
.addview-layout-body .v-gridlayout-margin > div > div > div > div.first-row {
	border-top: none;
}
.addview-layout-body .v-horizontallayout-gridform-field .v-horizontallayout-margin {
	padding: 5px 8px 5px 10px;
}
.addview-layout-body .v-horizontallayout-gridform-field .v-horizontallayout .v-horizontallayout-margin {
	padding: 0px;
} 
.addview-layout-body .depotComp {
	margin-top: 0px;
}

.addview-layout-body .depotComp .depotHeader, .addview-layout-body .depotComp.collapsed .depotHeader {
	border: none;
	padding-bottom: 0px;
	background: none;
}
.addview-layout-body .depotComp .depotHeader .h2 {
	color: rgb(69, 69, 69);
	font-weight: bold;
}
.addview-layout-body .depotComp.collapsed .depotHeader .h2 {
	border-bottom: none;
}
.addview-layout-body .depotComp .depot-title {
	background-position: left center;
}
.addview-layout-body .depotComp .depot-title .v-csslayout-margin {
	margin-left: 0px;
}
/* Note List Items */
.note-list .depotContent, .comment-list .depotContent {
	background-color: rgb(229, 239, 240);
}
/* End Note List Items */

/* Richtext Editor */
.v-richtextarea .gwt-RichTextToolbar {
	background: url("icons/grad-light-top.png") repeat-x left top #ebebeb;
	border-bottom: 1px solid #a9a9a9;
	padding: 3px;
}
.v-richtextarea .gwt-RichTextToolbar .gwt-ToggleButton, .v-richtextarea .gwt-RichTextToolbar .gwt-PushButton {
	background: none;
}
.v-richtextarea .gwt-RichTextToolbar .gwt-ListBox {
	margin-right: 3px;
}
/* End Richtext Editor */

/* The New GridLayout */
.colored-gridlayout .v-gridlayout-margin {
	border-bottom: 1px solid #a9a9a9;
}
.task-list .colored-gridlayout .v-gridlayout-margin {
	border-width: 0px 1px 1px 1px;
	border-style: solid;
	border-color: rgb(169, 169, 169);
}
.task-list {
	background-color: rgb(245, 245, 245);
}
.task-list-footer {
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	border-width: 0px 1px 1px 1px;
	border-style: solid;
	border-color: rgb(169, 169, 169);
}
.colored-gridlayout .v-gridlayout-margin .v-csslayout > .v-csslayout-margin {
	padding: 8px 5px 8px 18px;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}
/* ... */

